fix: adjust component spacing

--- a/src/app/shared/components/form-product-description/form-product-description.component.scss
+++ b/src/app/shared/components/form-product-description/form-product-description.component.scss
@@ -18,7 +18,7 @@ $clr-tomato: #ff6347;
 
     margin-inline: auto;
 
-    padding: $s-4;
+    padding: $s-1;
 
     & .required-field , .erro-message {
       color: $clr-tomato;
@@ -49,7 +49,6 @@ $clr-tomato: #ff6347;
         text-align: left;
       }
 
-
       & input {
         width: 250px;
         padding: $s-2;
@@ -60,8 +59,6 @@ $clr-tomato: #ff6347;
           outline: unset;
           box-shadow: $shadow-blue;
         }
-
-
       }
 
       & textarea {
